<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactProActivity">

    <EditText
        android:id="@+id/etNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Input nom" />

    <EditText
        android:id="@+id/etPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNom"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_prenom"
        app:layout_constraintStart_toStartOf="@id/etNom"
        app:layout_constraintTop_toBottomOf="@id/etNom"
        tools:text="Input prenom" />

    <EditText
        android:id="@+id/etSociete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_societe"
        app:layout_constraintStart_toStartOf="@id/etPrenom"
        app:layout_constraintTop_toBottomOf="@id/etPrenom"
        tools:text="Input societe" />

    <EditText
        android:id="@+id/etAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_adresse"
        app:layout_constraintStart_toStartOf="@id/etSociete"
        app:layout_constraintTop_toBottomOf="@id/etSociete"
        tools:text="Input adresse" />

    <EditText
        android:id="@+id/etTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_tel"
        app:layout_constraintStart_toStartOf="@id/etAdresse"
        app:layout_constraintTop_toBottomOf="@id/etAdresse"
        tools:text="Input tel" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_mail"
        app:layout_constraintStart_toStartOf="@id/etTel"
        app:layout_constraintTop_toBottomOf="@id/etTel"
        tools:text="Input mail" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_website"
        app:layout_constraintStart_toStartOf="@id/etMail"
        app:layout_constraintTop_toBottomOf="@id/etMail"
        tools:text="Input website" />

    <Spinner
        android:id="@+id/sprSecteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/etWebsite" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sprSecteur" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sprSecteur" />

</androidx.constraintlayout.widget.ConstraintLayout>